# sdizo_2

./: README.md
Sdizo_proj_2/: CMakeLists.txt
Sdizo_proj_2/alg/dikjstra/: Dijkstra_alg.cpp  Dijkstra_alg.h
Sdizo_proj_2/alg/ford_bell/: Ford_bell_alg.cpp  Ford_bell_alg.h
Sdizo_proj_2/alg/kruskal/: Kruskal_alg.cpp  Kruskal_alg.h
Sdizo_proj_2/alg/prim/: Prim_alg.cpp  Prim_alg.h
Sdizo_proj_2/application/: main.cpp
Sdizo_proj_2/data/: skier1.txt  skier2.txt  skier3.txt  test1.txt  test2.txt
Sdizo_proj_2/data/mst/: mst3.txt  mst4.txt  mst5.txt  mst6.txt  mst7.txt
Sdizo_proj_2/data/path/: skier4.txt  skier5.txt  skier6.txt  skier8.txt  skier9.txt
Sdizo_proj_2/file_oi/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
Sdizo_proj_2/graf/: Graf.cpp  Graf.h
Sdizo_proj_2/struct_help/adj_tab/: AdjList.cpp  AdjList.h  AdjNode.cpp  AdjNode.h
Sdizo_proj_2/struct_help/dym_arr/: Dym_arr.cpp  Dym_arr.h
Sdizo_proj_2/struct_help/edge/: Edge.cpp  Edge.h
Sdizo_proj_2/struct_help/matrix/: Matrix.cpp  Matrix.h
Sdizo_proj_2/struct_help/que_prio/: Heap.cpp  Heap.h  Que.cpp  Que.h  QueElement.cpp  QueElement.h  QueNode.cpp  QueNode.h
Sdizo_proj_2/struct_help/set_krus/: Dataset.cpp  Dataset.h
Sdizo_proj_2/test_results/: wyniki.txt
Sdizo_proj_2/tester/: Graph_gen.cpp  Graph_gen.h  Tester_alg.cpp  Tester_alg.h
Sdizo_proj_2/time_watch/: TimeWatch.cpp  TimeWatch.h
